Revision history for Perl extension JSON::XS

TODO: maybe avoid the reblessing and better support readonly objects.
TODO: http://stevehanov.ca/blog/index.php?id=104 compression

3.0112 2014-12-14 (rurban)
       - Add {get_,}stringify_infnan methods and use it in the test, now run-time. #32
         mode 0: null, 1: stringify, 2: inf/nan (invalid JSON) as before.
       - Remove build-time "Do you want to handle inf/nan as strings? Default: null." prompt.
       - Improve docs.

3.0111 2014-12-13 (rurban)
       - Fixed detecting 1.#INF/1.#IND on windows. #28
       - Also detect now -inf and -nan. #28
       - Fixed STRINGIFY_INFNAN return string, length off by one. #28
       - Fixed a non-C99 declaration error on XS.xs:863. Was broken with older MSVC.

3.0110 2014-12-12 (rurban)
       - Fixed one more memory bug with encode of dual-vars to strings,
         esp. with older perl <5.10, leading to eventual panic: realloc.

3.0109 2014-12-12 (rurban)
       - Fixed serious bug with encode of dual-vars to strings, missing
         the ending \0. #31 (Grinnz)

3.0108 2014-12-11 (rurban)
       - Change encode of numbers with dual-strings (int and float), integers
         and numbers are now not mishandled anymore by dual-vars, temp. string representations.
         Add t/117_numbers.t from JSON::PP, PR#10 by kraih.
       - Add prompt for nan/inf encode policy: null or stringify.
       - Change stringification of false and true to 0 and 1, matching upstream JSON and JSON::XS, #29.
         This didn't affect string comparisons, just e.g. print decode_json("false").
       - Tolerate literal ASCII TABs in strings in relaxed mode #22 (from JSON::XS)
       - Revise pod, merge updates from JSON::XS.
       - Fix pod typo #30 (Colin Kuskie)

3.0107 2014-11-28 (rurban)
       - fix fatal stack corruption with perl callbacks in list context
         #27 (dur-randir)

3.0106 2014-11-11 (rurban)
       - more minor doc improvements #26 (schwern)
