@@ -15,28 +15,36 @@ my ($inf, $nan) =
   ($^O eq 'MSWin32') ? ('1.#INF','1.#QNAN') :
   ($^O eq 'solaris') ? ('Infinity','NaN') :
                        ('inf','nan');
-my $neg_nan = ($^O eq 'MSWin32') ? $nan : "-".$nan;
+my $neg_nan = ($^O eq 'MSWin32') ? "-1.#IND" : "-".$nan;
 # newlib and glibc 2.5 have no -nan support, just nan
 if ($^O eq 'cygwin' or ($Config{glibc_version} && $Config{glibc_version} < 2.6)) {
   $neg_nan = $nan;
 }
 
-is $json->encode([9**9**9]),           "[\"$inf\"]",  "inf -> \"inf\"";
-is $json->encode([-sin(9**9**9)]),
-  $^O eq 'MSWin32' ? "[\"-1.#IND\"]" : "[\"$nan\"]",  "nan -> \"nan\"";
-is $json->encode([-9**9**9]),          "[\"-$inf\"]", "-inf -> \"-inf\"";
-is $json->encode([sin(9**9**9)]),      "[\"$neg_nan\"]", "-nan -> \"-nan\"";
-is $json->encode([9**9**9/9**9**9]),
-  $^O eq 'MSWin32' ? "[\"-1.#IND\"]" : "[\"$neg_nan\"]", "-nan -> \"-nan\"";
+is $json->encode([9**9**9]),         "[\"$inf\"]",  "inf -> \"inf\"";
+is $json->encode([-9**9**9]),        "[\"-$inf\"]", "-inf -> \"-inf\"";
+if ($^O eq 'MSWin32') {
+  like $json->encode([-sin(9**9**9)]),   qr/\[\"($neg_nan|$nan)\"\]/,  "nan -> \"nan\"";
+  like $json->encode([sin(9**9**9)]),    qr/\[\"($neg_nan|$nan)\"\]/, "-nan -> \"-nan\"";
+  like $json->encode([9**9**9/9**9**9]), qr/\[\"($neg_nan|$nan)\"\]/, "-nan -> \"-nan\"";
+} else {
+  is $json->encode([-sin(9**9**9)]),   "[\"$nan\"]",  "nan -> \"nan\"";
+  is $json->encode([sin(9**9**9)]),    "[\"$neg_nan\"]", "-nan -> \"-nan\"";
+  is $json->encode([9**9**9/9**9**9]), "[\"$neg_nan\"]", "-nan -> \"-nan\"";
+}
 
 $json = Cpanel::JSON::XS->new->stringify_infnan(2);
-is $json->encode([9**9**9]),       "[$inf]",  "inf";
-is $json->encode([-sin(9**9**9)]),
-  $^O eq 'MSWin32' ? "[-1.#IND]" : "[$nan]",  "nan";
-is $json->encode([-9**9**9]),      "[-$inf]", "-inf";
-is $json->encode([sin(9**9**9)]),  "[$neg_nan]", "-nan";
-is $json->encode([9**9**9/9**9**9]),
-  $^O eq 'MSWin32' ? "[-1.#IND]" : "[$neg_nan]", "-nan";
+is $json->encode([9**9**9]),         "[$inf]",  "inf";
+is $json->encode([-9**9**9]),        "[-$inf]", "-inf";
+if ($^O eq 'MSWin32') {
+  like $json->encode([-sin(9**9**9)]),   qr/\[($neg_nan|$nan)\]/,  "nan";
+  like $json->encode([sin(9**9**9)]),    qr/\[($neg_nan|$nan)\]/, "-nan";
+  like $json->encode([9**9**9/9**9**9]), qr/\[($neg_nan|$nan)\]/, "-nan";
+} else {
+  is $json->encode([-sin(9**9**9)]),   "[$nan]",  "nan";
+  is $json->encode([sin(9**9**9)]),    "[$neg_nan]", "-nan";
+  is $json->encode([9**9**9/9**9**9]), "[$neg_nan]", "-nan";
+}
 
 
 my $num = 3;
