@@ -6,6 +6,7 @@ TODO: http://stevehanov.ca/blog/index.php?id=104 compression
 3.0112 2014-12-14 (rurban)
        - Add {get_,}stringify_infnan methods and use it in the test, now run-time. #32
          mode 0: null, 1: stringify, 2: inf/nan (invalid JSON) as before.
+       - Fix t/117_number tests for Solaris and MSWin32
        - Remove build-time "Do you want to handle inf/nan as strings? Default: null." prompt.
        - Improve docs.
 
